# kairos

./: .env  .env.dev  Cargo.toml  LICENSE  README.md
config/: config.toml
migrations/: 20231024233510_basic_schema.sql
src/: config.rs  db.rs  graphql.rs  lib.rs  main.rs  routers.rs  server.rs
src/domains/: users.rs
src/domains/projects/: model.rs  service.rs
src/domains/todo_comments/: model.rs
src/domains/todos/: model.rs
src/domains/users/: model.rs  resolvers.rs  service.rs
src/entities/: mod.rs
src/graphql/: mod.rs  todos_comments.rs  users.rs
src/graphql/todos/: mod.rs  todos.rs
src/graphql/users/: mod.rs
src/utils/: generic_repository.rs
ui/: package.json
ui/src/: index.css  index.tsx
ui/src/components/Dnd/: dnd-provider.tsx  dnd.css  draggable.tsx  droppable.tsx  index.tsx
ui/src/components/Editor/: editor-toolbar.tsx  index.tsx
ui/src/components/Navigation/: language-menu.tsx  navbar.tsx  side-menu.tsx
ui/src/components/Tabs/: tabs.css  tabs.tsx
ui/src/components/WhiteBoard/: index.tsx
ui/src/features/todos/: index.tsx  todos-store.tsx
ui/src/features/todos/components/: select-todo-view.tsx  todos_view.tsx
ui/src/features/todos/components/kanban/: add-todo-input.tsx  kanban-action-bar.tsx  kanban-todo-snippet.tsx  kanban-view.tsx
ui/src/features/todos/components/maintable/: maintable_view.tsx
ui/src/features/todos/components/shared/: modal.tsx  todo-snippet.tsx
ui/src/i18n/: index.ts
ui/src/i18n/languages/: en.ts  fr.ts
ui/src/pages/: todos-page.tsx
ui/src/routes/: index.tsx  routes_definition.ts
