[package]
name = "kairos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
async-trait = "0.1.74"
axum = { version = "0.6.20" }
clap = { version = "4.4.2", features = ["cargo"] }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "9.0.0"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres","sqlite", "macros", "uuid", "time"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde"] }
