[package]
name = "kairos"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3


[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
async-trait = "0.1.74"
axum = { version = "0.6.20" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.2", features = ["cargo"] }
config = "0.13.3"
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "9.0.0"
serde = { version = "1.0.189", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "chrono"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
