[package]
name = "kairos"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.75"
async-graphql = "6.0.9"
async-graphql-axum = "6.0.9"
async-trait = "0.1.74"
axum = { version = "0.6.20" }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.2", features = ["cargo"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
figment = { version = "0.10.11", features = ["env", "toml"] }
jsonwebtoken = "9.0.0"
lettre = { version = "0.11.1", features = ["tokio1-rustls-tls", "tokio1-native-tls"] }
once_cell = "1.18.0"
openidconnect = "3.4.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "time", "chrono", "sqlite"] }
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
